Setup and working!

--- a/models/presentation.ini
+++ b/models/presentation.ini
@@ -1,11 +1,11 @@
 [model]
-name = Presentaion
+name = Presentation
 label = {{ this.title }}
 
 [children]
 model = slide
 order_by = order
 
-[field.title]
+[fields.title]
 label = Title
 type = string
