Added more code, tweaked examples

--- a/models/slide.ini
+++ b/models/slide.ini
@@ -19,18 +19,21 @@ width = 1/2
 
 [fields.transition]
 label = Transition
-description = Transition applied to this slide (none uses global default)
 type = select
 choices = , none, fade, slide, convex, concave, zoom
 choice_labels = -Default-, None, Fade, Slide, Convex, Concave, Zoom
-width = 1/2
+width = 1/4
 
 [fields.transition_out]
 label = Transition Out
-description = Specify alternate slide-out transition.
 type = select
 choices = , none, fade, slide, convex, concave, zoom
 choice_labels = -Default-, None, Fade, Slide, Convex, Concave, Zoom
+width = 1/4
+
+[fields.extra_data_attrs]
+label = Additional data attrs
+type = string
 width = 1/2
 
 [fields.body]
